tests/specs/ExportDefaultFn.txt
# mod.ts
export default function foo(a: number) {
  return a;
}
/** @ignore */
export default function foo(a: number) {
  return a;
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export default function foo(a: number) {
  | ^


error[missing-return-type]: exported function is missing an explicit return type annotation
 --> /mod.ts:1:1
  | 
1 | export default function foo(a: number) {
  | ^


# output.txt
Defined in file:///mod.ts:1:1

function default(a: number)


# output.json
[
  {
    "kind": "function",
    "name": "default",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "functionDef": {
      "defName": "foo",
      "params": [
        {
          "kind": "identifier",
          "name": "a",
          "optional": false,
          "tsType": {
            "repr": "number",
            "kind": "keyword",
            "keyword": "number"
          }
        }
      ],
      "returnType": null,
      "hasBody": true,
      "isAsync": false,
      "isGenerator": false,
      "typeParams": []
    }
  }
]
